--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
-*{
-    background-color: white;
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
+
+.font-mulish{
+    font-family: "Mulish", sans-serif;
 }
